--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1940,6 +1940,29 @@ input[type=file]::file-selector-button:hover {
   visibility: visible;
   opacity: 1;
 }
+.tw-input {
+  flex-shrink: 1;
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  height: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  line-height: 2;
+  border-width: 1px;
+  border-color: hsl(var(--bc) / var(--tw-border-opacity));
+  --tw-border-opacity: 0;
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
+  border-radius: var(--rounded-btn, 0.5rem);
+}
+.tw-input-group > *, .tw-input-group > .tw-input {
+  border-radius: 0px;
+}
 .tw-link {
   cursor: pointer;
   -webkit-text-decoration-line: underline;
@@ -2019,6 +2042,30 @@ input[type=file]::file-selector-button:hover {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.tw-input:focus {
+  outline: 2px solid hsla(var(--bc) / 0.2);
+  outline-offset: 2px;
+}
+.tw-input-disabled, .tw-input[disabled] {
+  cursor: not-allowed;
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--b2, var(--b1)) / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b2, var(--b1)) / var(--tw-bg-opacity));
+  --tw-text-opacity: 0.2;
+}
+.tw-input-disabled::-moz-placeholder, .tw-input[disabled]::-moz-placeholder {
+  color: hsl(var(--bc) / var(--tw-placeholder-opacity));
+  --tw-placeholder-opacity: 0.2;
+}
+.tw-input-disabled:-ms-input-placeholder, .tw-input[disabled]:-ms-input-placeholder {
+  color: hsl(var(--bc) / var(--tw-placeholder-opacity));
+  --tw-placeholder-opacity: 0.2;
+}
+.tw-input-disabled::placeholder, .tw-input[disabled]::placeholder {
+  color: hsl(var(--bc) / var(--tw-placeholder-opacity));
+  --tw-placeholder-opacity: 0.2;
 }
 .tw-link:focus {
   outline: 2px solid transparent;
@@ -2110,6 +2157,10 @@ input[type=file]::file-selector-button:hover {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
+.tw-mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
 .tw-my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -2130,6 +2181,10 @@ input[type=file]::file-selector-button:hover {
   margin-top: auto;
   margin-bottom: auto;
 }
+.tw-mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
 .tw-my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -2138,13 +2193,29 @@ input[type=file]::file-selector-button:hover {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.tw-mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.tw-mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+.tw-mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 .tw-mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
-.tw-mx-16 {
-  margin-left: 4rem;
-  margin-right: 4rem;
+.tw-mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.tw-mx-9 {
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
 }
 .tw-mt-12 {
   margin-top: 3rem;
@@ -2154,6 +2225,9 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-mt-5 {
   margin-top: 1.25rem;
+}
+.tw-mb-32 {
+  margin-bottom: 8rem;
 }
 .tw--mt-3 {
   margin-top: -0.75rem;
@@ -2173,6 +2247,9 @@ input[type=file]::file-selector-button:hover {
 .tw-ml-1 {
   margin-left: 0.25rem;
 }
+.tw-mb-5 {
+  margin-bottom: 1.25rem;
+}
 .tw-mt-3 {
   margin-top: 0.75rem;
 }
@@ -2184,9 +2261,6 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-mb-2 {
   margin-bottom: 0.5rem;
-}
-.tw-mb-5 {
-  margin-bottom: 1.25rem;
 }
 .tw-mr-3 {
   margin-right: 0.75rem;
@@ -2212,8 +2286,32 @@ input[type=file]::file-selector-button:hover {
 .tw-mr-1 {
   margin-right: 0.25rem;
 }
-.tw-mb-32 {
-  margin-bottom: 8rem;
+.tw-mr-\[20\%\] {
+  margin-right: 20%;
+}
+.tw-mr-\[15\%\] {
+  margin-right: 15%;
+}
+.tw-mr-\[18\%\] {
+  margin-right: 18%;
+}
+.tw-mr-\[19\%\] {
+  margin-right: 19%;
+}
+.tw-mr-\[25\%\] {
+  margin-right: 25%;
+}
+.tw-mr-\[23\%\] {
+  margin-right: 23%;
+}
+.tw-mr-\[35\%\] {
+  margin-right: 35%;
+}
+.tw-mr-\[38\%\] {
+  margin-right: 38%;
+}
+.tw-mr-\[37\%\] {
+  margin-right: 37%;
 }
 .tw-block {
   display: block;
@@ -2226,6 +2324,9 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-h-full {
   height: 100%;
+}
+.tw-max-h-full {
+  max-height: 100%;
 }
 .tw-w-full {
   width: 100%;
@@ -2244,6 +2345,18 @@ input[type=file]::file-selector-button:hover {
 .tw-cursor-pointer {
   cursor: pointer;
 }
+.tw-list-disc {
+  list-style-type: disc;
+}
+.tw-list-\[upper-roman\] {
+  list-style-type: upper-roman;
+}
+.tw-list-\[lower-alpha\] {
+  list-style-type: lower-alpha;
+}
+.tw-list-\[numberic\] {
+  list-style-type: numberic;
+}
 .tw-appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -2252,10 +2365,6 @@ input[type=file]::file-selector-button:hover {
 .tw-columns-4 {
   -moz-columns: 4;
        columns: 4;
-}
-.tw-columns-2 {
-  -moz-columns: 2;
-       columns: 2;
 }
 .tw-grid-flow-row {
   grid-auto-flow: row;
@@ -2282,8 +2391,14 @@ input[type=file]::file-selector-button:hover {
 .tw-content-center {
   align-content: center;
 }
+.tw-items-center {
+  align-items: center;
+}
 .tw-justify-end {
   justify-content: flex-end;
+}
+.tw-gap-1 {
+  gap: 0.25rem;
 }
 .tw-gap-2 {
   gap: 0.5rem;
@@ -2299,11 +2414,11 @@ input[type=file]::file-selector-button:hover {
 .tw-rounded-xl {
   border-radius: 0.75rem;
 }
-.tw-rounded-md {
-  border-radius: 0.375rem;
-}
 .tw-rounded-lg {
   border-radius: 0.5rem;
+}
+.tw-rounded-md {
+  border-radius: 0.375rem;
 }
 .tw-rounded-3xl {
   border-radius: 1.5rem;
@@ -2360,13 +2475,13 @@ input[type=file]::file-selector-button:hover {
 .tw-bg-blue-500\/100 {
   background-color: rgb(63 131 248 / 1);
 }
-.tw-bg-\[\#fff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .tw-bg-orange-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 138 76 / var(--tw-bg-opacity));
+}
+.tw-bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .tw-bg-transparent {
   background-color: transparent;
@@ -2374,6 +2489,10 @@ input[type=file]::file-selector-button:hover {
 .tw-bg-\[\#FFF0B3\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 240 179 / var(--tw-bg-opacity));
+}
+.tw-bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .tw-p-7 {
   padding: 1.75rem;
@@ -2386,6 +2505,9 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-p-1 {
   padding: 0.25rem;
+}
+.tw-p-2\.5 {
+  padding: 0.625rem;
 }
 .tw-px-0 {
   padding-left: 0px;
@@ -2419,13 +2541,13 @@ input[type=file]::file-selector-button:hover {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.tw-px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
 .tw-px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+.tw-py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .tw-pt-\[5\%\] {
   padding-top: 5%;
@@ -2489,11 +2611,11 @@ input[type=file]::file-selector-button:hover {
 .tw-font-bold {
   font-weight: 700;
 }
-.tw-font-extrabold {
-  font-weight: 800;
-}
 .tw-font-medium {
   font-weight: 500;
+}
+.tw-font-extrabold {
+  font-weight: 800;
 }
 .tw-text-gray-600 {
   --tw-text-opacity: 1;
@@ -2515,6 +2637,10 @@ input[type=file]::file-selector-button:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.tw-text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(63 131 248 / var(--tw-text-opacity));
+}
 .tw-text-\[\#FA592B\] {
   --tw-text-opacity: 1;
   color: rgb(250 89 43 / var(--tw-text-opacity));
@@ -2522,10 +2648,6 @@ input[type=file]::file-selector-button:hover {
 .tw-text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(14 159 110 / var(--tw-text-opacity));
-}
-.tw-text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 .tw-underline {
   -webkit-text-decoration-line: underline;
@@ -2572,6 +2694,10 @@ input[type=file]::file-selector-button:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 127 0 / var(--tw-border-opacity));
 }
+.focus\:tw-border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(63 131 248 / var(--tw-border-opacity));
+}
 .focus\:tw-outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2580,6 +2706,10 @@ input[type=file]::file-selector-button:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:tw-ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
 }
 .active\:tw-outline-none:active {
   outline: 2px solid transparent;
@@ -2593,9 +2723,25 @@ input[type=file]::file-selector-button:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 138 76 / var(--tw-bg-opacity));
 }
+.tw-dark .dark\:tw-bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
 .tw-dark .dark\:tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.tw-dark .dark\:tw-placeholder-gray-400::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+.tw-dark .dark\:tw-placeholder-gray-400:-ms-input-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+.tw-dark .dark\:tw-placeholder-gray-400::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 .tw-dark .dark\:hover\:tw-bg-\[\#ff7f00\]:hover {
   --tw-bg-opacity: 1;
@@ -2604,6 +2750,10 @@ input[type=file]::file-selector-button:hover {
 .tw-dark .dark\:focus\:tw-border-\[\#ff7f00\]:focus {
   --tw-border-opacity: 1;
   border-color: rgb(255 127 0 / var(--tw-border-opacity));
+}
+.tw-dark .dark\:focus\:tw-ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
 }
 @media (min-width: 768px) {
 
@@ -2618,6 +2768,18 @@ input[type=file]::file-selector-button:hover {
 
   .md\:tw-mr-\[48\%\] {
     margin-right: 48%;
+  }
+
+  .md\:tw-mr-\[40\%\] {
+    margin-right: 40%;
+  }
+
+  .md\:tw-mr-\[30\%\] {
+    margin-right: 30%;
+  }
+
+  .md\:tw-mr-\[10\%\] {
+    margin-right: 10%;
   }
 
   .md\:tw-max-w-full {
