--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1601,8 +1601,7 @@ select {
   background-repeat: no-repeat;
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
-  -webkit-print-color-adjust: exact;
-          color-adjust: exact;
+  print-color-adjust: exact;
 }
 
 [multiple] {
@@ -1611,8 +1610,7 @@ select {
   background-repeat: unset;
   background-size: initial;
   padding-right: 0.75rem;
-  -webkit-print-color-adjust: unset;
-          color-adjust: unset;
+  print-color-adjust: unset;
 }
 
 [type='checkbox'],[type='radio'] {
@@ -1620,8 +1618,7 @@ select {
      -moz-appearance: none;
           appearance: none;
   padding: 0;
-  -webkit-print-color-adjust: exact;
-          color-adjust: exact;
+  print-color-adjust: exact;
   display: inline-block;
   vertical-align: middle;
   background-origin: border-box;
@@ -1700,16 +1697,16 @@ select {
 }
 
 [type='file']:focus {
-  outline: 1px auto -webkit-focus-ring-color;
+  outline: 1px auto inherit;
 }
 
 input[type=file]::-webkit-file-upload-button {
   color: white;
-  background: #374151;
+  background: #1F2937;
+  border: 0;
   font-weight: 500;
   font-size: 0.875rem;
   cursor: pointer;
-  border: 0;
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
   padding-left: 2rem;
@@ -1722,11 +1719,11 @@ input[type=file]::-webkit-file-upload-button {
 
 input[type=file]::file-selector-button {
   color: white;
-  background: #374151;
+  background: #1F2937;
+  border: 0;
   font-weight: 500;
   font-size: 0.875rem;
   cursor: pointer;
-  border: 0;
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
   padding-left: 2rem;
@@ -1738,11 +1735,61 @@ input[type=file]::file-selector-button {
 }
 
 input[type=file]::-webkit-file-upload-button:hover {
-  background: #4B5563;
+  background: #374151;
 }
 
 input[type=file]::file-selector-button:hover {
-  background: #4B5563;
+  background: #374151;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  height: 1.25rem;
+  width: 1.25rem;
+  background: #1C64F2;
+  border-radius: 9999px;
+  border: 0;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+}
+
+input[type="range"]:disabled::-webkit-slider-thumb {
+  background: #9CA3AF;
+}
+
+input[type="range"]:focus::-webkit-slider-thumb {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1px;
+  --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity));
+}
+
+input[type="range"]::-moz-range-thumb {
+  height: 1.25rem;
+  width: 1.25rem;
+  background: #1C64F2;
+  border-radius: 9999px;
+  border: 0;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+}
+
+input[type="range"]:disabled::-moz-range-thumb {
+  background: #9CA3AF;
+}
+
+input[type="range"]::-moz-range-progress {
+  background: #3F83F8;
+}
+
+input[type="range"]::-ms-fill-lower {
+  background: #3F83F8;
 }
 
 [data-tooltip-style^='light'] + .tooltip > .tooltip-arrow:before {
@@ -1895,6 +1942,18 @@ input[type=file]::file-selector-button:hover {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+.tw-carousel-item {
+  box-sizing: content-box;
+  display: flex;
+  flex: none;
+  scroll-snap-align: start;
+}
+.tw-carousel-center .tw-carousel-item {
+  scroll-snap-align: center;
+}
+.tw-carousel-end .tw-carousel-item {
+  scroll-snap-align: end;
 }
 .tw-divider {
   display: flex;
@@ -2096,8 +2155,32 @@ input[type=file]::file-selector-button:hover {
     transform: translateY(0);
   }
 }
+.tw-rounded-box {
+  border-radius: var(--rounded-box, 1rem);
+}
+.tw-absolute {
+  position: absolute;
+}
 .tw-relative {
   position: relative;
+}
+.tw-top-1\/2 {
+  top: 50%;
+}
+.tw-left-1\/2 {
+  left: 50%;
+}
+.tw-bottom-5 {
+  bottom: 1.25rem;
+}
+.tw-left-5 {
+  left: 1.25rem;
+}
+.tw-right-5 {
+  right: 1.25rem;
+}
+.tw-z-30 {
+  z-index: 30;
 }
 .tw-m-auto {
   margin: auto;
@@ -2238,11 +2321,23 @@ input[type=file]::file-selector-button:hover {
 .tw-grid {
   display: grid;
 }
+.tw-hidden {
+  display: none;
+}
 .tw-h-full {
   height: 100%;
 }
+.tw-h-56 {
+  height: 14rem;
+}
+.tw-h-3 {
+  height: 0.75rem;
+}
 .tw-w-full {
   width: 100%;
+}
+.tw-w-3 {
+  width: 0.75rem;
 }
 .tw-min-w-max {
   min-width: -webkit-max-content;
@@ -2254,6 +2349,17 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-flex-1 {
   flex: 1 1 0%;
+}
+.tw--translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.tw--translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.tw-transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .tw-cursor-pointer {
   cursor: pointer;
@@ -2301,6 +2407,9 @@ input[type=file]::file-selector-button:hover {
 .tw-justify-end {
   justify-content: flex-end;
 }
+.tw-justify-between {
+  justify-content: space-between;
+}
 .tw-gap-1 {
   gap: 0.25rem;
 }
@@ -2311,6 +2420,14 @@ input[type=file]::file-selector-button:hover {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+.tw-space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.tw-overflow-hidden {
+  overflow: hidden;
 }
 .tw-rounded {
   border-radius: 0.25rem;
@@ -2323,6 +2440,9 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-rounded-md {
   border-radius: 0.375rem;
+}
+.tw-rounded-full {
+  border-radius: 9999px;
 }
 .tw-rounded-3xl {
   border-radius: 1.5rem;
@@ -2500,6 +2620,10 @@ input[type=file]::file-selector-button:hover {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.tw-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2513,6 +2637,9 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-font-medium {
   font-weight: 500;
+}
+.tw-font-semibold {
+  font-weight: 600;
 }
 .tw-font-extrabold {
   font-weight: 800;
@@ -2569,6 +2696,15 @@ input[type=file]::file-selector-button:hover {
 }
 .tw-duration-300 {
   transition-duration: 300ms;
+}
+.tw-duration-700 {
+  transition-duration: 700ms;
+}
+.tw-duration-75 {
+  transition-duration: 75ms;
+}
+.tw-ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hover\:tw-bg-orange-600:hover {
   --tw-bg-opacity: 1;
@@ -2627,6 +2763,10 @@ input[type=file]::file-selector-button:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
+.tw-dark .dark\:tw-text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
 .tw-dark .dark\:tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2654,6 +2794,17 @@ input[type=file]::file-selector-button:hover {
 .tw-dark .dark\:focus\:tw-ring-blue-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity));
+}
+@media (min-width: 640px) {
+
+  .sm\:tw-h-64 {
+    height: 16rem;
+  }
+
+  .sm\:tw-text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 @media (min-width: 768px) {
 
@@ -2699,6 +2850,10 @@ input[type=file]::file-selector-button:hover {
 }
 @media (min-width: 1280px) {
 
+  .xl\:tw-h-80 {
+    height: 20rem;
+  }
+
   .xl\:tw-w-full {
     width: 100%;
   }
@@ -2709,5 +2864,11 @@ input[type=file]::file-selector-button:hover {
 
   .xl\:tw-place-content-center {
     place-content: center;
+  }
+}
+@media (min-width: 1536px) {
+
+  .\32xl\:tw-h-96 {
+    height: 24rem;
   }
 }
