--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2365,18 +2365,6 @@ input:checked + .toggle-bg {
 .tw-mb-1 {
   margin-bottom: 0.25rem;
 }
-.tw-mt-12 {
-  margin-top: 3rem;
-}
-.tw-mt-8 {
-  margin-top: 2rem;
-}
-.tw-mt-5 {
-  margin-top: 1.25rem;
-}
-.tw-mb-32 {
-  margin-bottom: 8rem;
-}
 .tw-mt-1 {
   margin-top: 0.25rem;
 }
@@ -2398,11 +2386,17 @@ input:checked + .toggle-bg {
 .tw-mb-10 {
   margin-bottom: 2.5rem;
 }
+.tw-mt-5 {
+  margin-top: 1.25rem;
+}
 .tw-mb-3 {
   margin-bottom: 0.75rem;
 }
 .tw-mb-6 {
   margin-bottom: 1.5rem;
+}
+.tw-mt-12 {
+  margin-top: 3rem;
 }
 .tw-ml-4 {
   margin-left: 1rem;
@@ -2415,6 +2409,9 @@ input:checked + .toggle-bg {
 }
 .tw-mt-10 {
   margin-top: 2.5rem;
+}
+.tw-mt-8 {
+  margin-top: 2rem;
 }
 .tw-mt-6 {
   margin-top: 1.5rem;
@@ -2430,6 +2427,9 @@ input:checked + .toggle-bg {
 }
 .tw-ml-3 {
   margin-left: 0.75rem;
+}
+.tw-mb-32 {
+  margin-bottom: 8rem;
 }
 .tw-ml-1 {
   margin-left: 0.25rem;
@@ -2479,14 +2479,14 @@ input:checked + .toggle-bg {
 .tw-h-8 {
   height: 2rem;
 }
-.tw-h-full {
-  height: 100%;
-}
 .tw-h-16 {
   height: 4rem;
 }
 .tw-h-10 {
   height: 2.5rem;
+}
+.tw-h-full {
+  height: 100%;
 }
 .tw-h-56 {
   height: 14rem;
@@ -2511,6 +2511,12 @@ input:checked + .toggle-bg {
 }
 .tw-h-4 {
   height: 1rem;
+}
+.tw-h-\[150px\] {
+  height: 150px;
+}
+.tw-h-\[200px\] {
+  height: 200px;
 }
 .tw-max-h-screen {
   max-height: 100vh;
@@ -2545,12 +2551,12 @@ input:checked + .toggle-bg {
 .tw-w-4 {
   width: 1rem;
 }
+.tw-w-\[150px\] {
+  width: 150px;
+}
 .tw-min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
-}
-.tw-max-w-full {
-  max-width: 100%;
 }
 .tw-max-w-screen-xl {
   max-width: 1280px;
@@ -2566,6 +2572,9 @@ input:checked + .toggle-bg {
 }
 .tw-max-w-md {
   max-width: 28rem;
+}
+.tw-max-w-full {
+  max-width: 100%;
 }
 .tw-flex-1 {
   flex: 1 1 0%;
@@ -2672,15 +2681,15 @@ input:checked + .toggle-bg {
 .tw-gap-1 {
   gap: 0.25rem;
 }
-.tw-space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
 .tw-space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.tw-space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 .tw-overflow-hidden {
   overflow: hidden;
@@ -2693,9 +2702,6 @@ input:checked + .toggle-bg {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.tw-rounded {
-  border-radius: 0.25rem;
-}
 .tw-rounded-xl {
   border-radius: 0.75rem;
 }
@@ -2704,6 +2710,9 @@ input:checked + .toggle-bg {
 }
 .tw-rounded-full {
   border-radius: 9999px;
+}
+.tw-rounded {
+  border-radius: 0.25rem;
 }
 .tw-rounded-md {
   border-radius: 0.375rem;
@@ -2735,10 +2744,6 @@ input:checked + .toggle-bg {
 .tw-border-b-2 {
   border-bottom-width: 2px;
 }
-.tw-border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
 .tw-border-\[\#fff\] {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -2750,6 +2755,10 @@ input:checked + .toggle-bg {
 .tw-border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.tw-border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 .tw-border-gray-600 {
   --tw-border-opacity: 1;
@@ -2763,25 +2772,18 @@ input:checked + .toggle-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
-.tw-bg-\[\#ff7f00\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 127 0 / var(--tw-bg-opacity));
-}
-.tw-bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .tw-bg-orange {
   --tw-bg-opacity: 1;
   background-color: rgb(255 127 0 / var(--tw-bg-opacity));
-}
-.tw-bg-blue-500\/100 {
-  background-color: rgb(63 131 248 / 1);
 }
 .tw-bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
 .tw-bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.tw-bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
@@ -2792,6 +2794,13 @@ input:checked + .toggle-bg {
 .tw-bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.tw-bg-\[\#ff7f00\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 127 0 / var(--tw-bg-opacity));
+}
+.tw-bg-blue-500\/100 {
+  background-color: rgb(63 131 248 / 1);
 }
 .tw-bg-transparent {
   background-color: transparent;
@@ -2807,9 +2816,6 @@ input:checked + .toggle-bg {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.tw-p-7 {
-  padding: 1.75rem;
-}
 .tw-p-8 {
   padding: 2rem;
 }
@@ -2821,6 +2827,9 @@ input:checked + .toggle-bg {
 }
 .tw-p-2 {
   padding: 0.5rem;
+}
+.tw-p-7 {
+  padding: 1.75rem;
 }
 .tw-p-3 {
   padding: 0.75rem;
@@ -2836,18 +2845,6 @@ input:checked + .toggle-bg {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.tw-px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.tw-px-10 {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.tw-py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
 .tw-px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -2855,6 +2852,10 @@ input:checked + .toggle-bg {
 .tw-px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+.tw-py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 .tw-px-9 {
   padding-left: 2.25rem;
@@ -2880,6 +2881,14 @@ input:checked + .toggle-bg {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.tw-px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.tw-px-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .tw-py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -2887,18 +2896,6 @@ input:checked + .toggle-bg {
 .tw-px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-.tw-pt-\[5\%\] {
-  padding-top: 5%;
-}
-.tw-pt-2 {
-  padding-top: 0.5rem;
-}
-.tw-pb-2 {
-  padding-bottom: 0.5rem;
-}
-.tw-pt-1 {
-  padding-top: 0.25rem;
 }
 .tw-pt-12 {
   padding-top: 3rem;
@@ -2918,6 +2915,9 @@ input:checked + .toggle-bg {
 .tw-pb-6 {
   padding-bottom: 1.5rem;
 }
+.tw-pb-2 {
+  padding-bottom: 0.5rem;
+}
 .tw-pt-16 {
   padding-top: 4rem;
 }
@@ -2927,14 +2927,23 @@ input:checked + .toggle-bg {
 .tw-pt-6 {
   padding-top: 1.5rem;
 }
-.tw-pb-16 {
-  padding-bottom: 4rem;
+.tw-pt-24 {
+  padding-top: 6rem;
 }
 .tw-pb-24 {
   padding-bottom: 6rem;
 }
-.tw-pt-24 {
-  padding-top: 6rem;
+.tw-pb-16 {
+  padding-bottom: 4rem;
+}
+.tw-pt-\[5\%\] {
+  padding-top: 5%;
+}
+.tw-pt-2 {
+  padding-top: 0.5rem;
+}
+.tw-pt-1 {
+  padding-top: 0.25rem;
 }
 .tw-pl-3 {
   padding-left: 0.75rem;
@@ -2964,10 +2973,6 @@ input:checked + .toggle-bg {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.tw-text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2975,6 +2980,10 @@ input:checked + .toggle-bg {
 .tw-text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.tw-text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .tw-text-xs {
   font-size: 0.75rem;
@@ -3019,21 +3028,13 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.tw-text-gray-600 {
+.tw-text-teal-600 {
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  color: rgb(4 116 129 / var(--tw-text-opacity));
 }
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.tw-text-\[\#ff7f00\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 127 0 / var(--tw-text-opacity));
-}
-.tw-text-teal-600 {
-  --tw-text-opacity: 1;
-  color: rgb(4 116 129 / var(--tw-text-opacity));
 }
 .tw-text-orange {
   --tw-text-opacity: 1;
@@ -3054,6 +3055,14 @@ input:checked + .toggle-bg {
 .tw-text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(240 82 82 / var(--tw-text-opacity));
+}
+.tw-text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.tw-text-\[\#ff7f00\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 127 0 / var(--tw-text-opacity));
 }
 .tw-text-blue-500 {
   --tw-text-opacity: 1;
@@ -3126,12 +3135,12 @@ input:checked + .toggle-bg {
 .tw-ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.hover\:tw-bg-orange\/90:hover {
+  background-color: rgb(255 127 0 / 0.9);
+}
 .hover\:tw-bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
-}
-.hover\:tw-bg-orange\/90:hover {
-  background-color: rgb(255 127 0 / 0.9);
 }
 .hover\:tw-bg-\[\#ff7f00\]:hover {
   --tw-bg-opacity: 1;
@@ -3145,13 +3154,13 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
-.hover\:tw-text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
 .hover\:tw-text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.hover\:tw-text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .hover\:tw-text-white:hover {
   --tw-text-opacity: 1;
@@ -3528,14 +3537,14 @@ input:checked + .toggle-bg {
     padding: 0.75rem;
   }
 
-  .md\:tw-px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
   .md\:tw-px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:tw-px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:tw-pb-3 {
@@ -3784,10 +3793,6 @@ input:checked + .toggle-bg {
     height: 259px;
   }
 
-  .xl\:tw-w-full {
-    width: 100%;
-  }
-
   .xl\:tw-w-\[590px\] {
     width: 590px;
   }
@@ -3806,6 +3811,10 @@ input:checked + .toggle-bg {
 
   .xl\:tw-w-\[184px\] {
     width: 184px;
+  }
+
+  .xl\:tw-w-full {
+    width: 100%;
   }
 
   .xl\:tw-w-56 {
@@ -3970,12 +3979,16 @@ input:checked + .toggle-bg {
     padding-top: 0px;
   }
 
-  .mobile\:tw-pt-1 {
-    padding-top: 0.25rem;
+  .mobile\:tw-pt-16 {
+    padding-top: 4rem;
   }
 
   .mobile\:tw-pb-16 {
     padding-bottom: 4rem;
+  }
+
+  .mobile\:tw-pt-1 {
+    padding-top: 0.25rem;
   }
 
   .mobile\:tw-text-center {
